fix html bleed over in quote titles

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -470,7 +470,7 @@ ARROWS THAT TRACK CURSOR
 }
 
 //single quote page
-.single-quote blockquote {
+.single-quote-content blockquote {
     margin: 30px 0;
     color: #4e4d4d;
 }
